test/typecheck/errors/re-decl-var.boa
o: output sum of int;
o << 1;

f: function();

f := function() {
	v := 1;
};
